2006-05-01  Vlad Seryakov  <seryakov@users.sf.net>

	* added atExit callback that closes still open 
        database connections
        
2006-04-25  Vlad Seryakov  <seryakov@users.sf.net>

	* fixed bug with memory allocation

2006-04-17  Vlad Seryakov  <seryakov@users.sf.net>

	* fixed bug in the config initialization

2005-06-16  Vlad Seryakov  <seryakov@users.sf.net>

	* nsdbbdb: initial upload
